Reg User Profile Page (Controller): + minor fix